---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-09-11
  Changes:
    - Description update.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-09-11
  Changes:
    - Added mod setting to start the game with extra clones.
    - Added mod setting to disable the 'Character cloning' technology
    - Added mod setting to start the game with the cloning recipe enabled.
  Balancing:
    - Decreased the crafting time of the clone recipe (-20%).
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2025-09-10
  Bugfixes:
    - Fixed that characters created by rejoining multiplayer games would be lost after switching out of them.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-08-31
  Bugfixes:
    - Fixed that Clones on space platforms would end up outside the hub when switching into them. (This fix should be backwards-compatible.)
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2025-04-19
  Bugfixes:
    - Fixed a crash related to cursor stacks.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-04-03
  Info:
    - Added Space Age tag.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-03-28
  Bugfixes:
    - Fixed the cropping of the technology icon.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-03-26
  Changes:
    - Description updated.