@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that players did not correctly switch into new clones after crafting them.
+    - Fixed that players ended up with extra nutrients and bioflux when crafting multiple clones in the ccrafting queue.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2025-09-11
